--- a/data/quality/markov_read_quality.ipynb
+++ b/data/quality/markov_read_quality.ipynb
@@ -2,68 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forward = \"r1.fq\"\n",
-    "reverse = \"r2.fq\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pickling qualities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qualities = []\n",
-    "with open(forward,\"r\") as f:\n",
-    "    qual = False\n",
-    "    for line in f: \n",
-    "        if line[0] == \"+\":\n",
-    "            qual = True\n",
-    "            continue\n",
-    "        elif qual == True:\n",
-    "            line = line.rstrip()\n",
-    "            qualities.append(line)\n",
-    "            qual = False\n",
-    "pickle.dump(qualities, open('fwd_qual.p','wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qualities = []\n",
-    "with open(reverse,\"r\") as f:\n",
-    "    qual = False\n",
-    "    for line in f: \n",
-    "        if line[0] == \"+\":\n",
-    "            qual = True\n",
-    "            continue\n",
-    "        elif qual == True:\n",
-    "            line = line.rstrip()\n",
-    "            qualities.append(line)\n",
-    "            qual = False\n",
-    "pickle.dump(qualities, open('rev_qual.p','wb'))"
    ]
   },
   {
@@ -75,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fwd_anon = \"r1_anon.fq\"\n",
-    "rev_anon = \"r2_anon.fq\""
+    "forward = \"test.1.fq\"\n",
+    "reverse = \"test.2.fq\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,17 +50,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fwd = read_fq(forward)\n",
-    "rev = read_fq(reverse)"
+    "fwd_anon = \"r1_anon.fq\"\n",
+    "rev_anon = \"r2_anon.fq\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fwd = read_fq(forward, machine=\"@HWI-ST1\")\n",
+    "rev = read_fq(reverse, machine=\"@HWI-ST1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +94,64 @@
     "        f2.write(replace_seqs(rev[akey][0])+\"\\n\")\n",
     "        f2.write(rev[akey][1]+\"\\n\")\n",
     "        f2.write(rev[akey][2]+\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pickling qualities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qualities = []\n",
+    "with open(fwd_anon,\"r\") as f:\n",
+    "    qual = False\n",
+    "    for line in f: \n",
+    "        if line[0] == \"+\":\n",
+    "            qual = True\n",
+    "            continue\n",
+    "        elif qual == True:\n",
+    "            line = line.rstrip()\n",
+    "            qualities.append(line)\n",
+    "            qual = False\n",
+    "pickle.dump(qualities, open('fwd_qual.p','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qualities = []\n",
+    "with open(rev_anon,\"r\") as f:\n",
+    "    qual = False\n",
+    "    for line in f: \n",
+    "        if line[0] == \"+\":\n",
+    "            qual = True\n",
+    "            continue\n",
+    "        elif qual == True:\n",
+    "            line = line.rstrip()\n",
+    "            qualities.append(line)\n",
+    "            qual = False\n",
+    "pickle.dump(qualities, open('rev_qual.p','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def qscore_err(qscore):\n",
+    "    res = 10**(qscore/(-10))\n",
+    "    return(res)"
    ]
   }
  ],
